RESOLVED FIXED87712
[Qt] Uninitialized shader compiler when GLES is used
https://bugs.webkit.org/show_bug.cgi?id=87712
Summary [Qt] Uninitialized shader compiler when GLES is used
Roland Takacs
Reported 2012-05-29 02:16:24 PDT
Shader codes cannot be compiled under GLES.
Attachments
patch (1.64 KB, patch)
2012-05-29 06:02 PDT, Roland Takacs
no flags
Roland Takacs
Comment 1 2012-05-29 06:02:54 PDT
WebKit Review Bot
Comment 2 2012-05-29 09:21:00 PDT
Comment on attachment 144533 [details] patch Clearing flags on attachment: 144533 Committed r118788: <http://trac.webkit.org/changeset/118788>
WebKit Review Bot
Comment 3 2012-05-29 09:21:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.