[Qt] Uninitialized shader compiler when GLES is used https://bugs.webkit.org/show_bug.cgi?id=87712

The '#if !defined(QT_OPENGL_ES_2)' has been removed before the initialization
of shader compiler to compile shader codes for ES-platforms as well.

Patch by Roland Takacs <takacs.roland@stud.u-szeged.hu> on 2012-05-29
Reviewed by Noam Rosenthal.

* platform/graphics/qt/GraphicsContext3DQt.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):

Canonical link: https://commits.webkit.org/105529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118788 268f45cc-cd09-0410-ab3c-d52691b4dbfc